BAU: Clean up the IDP Config
Clean up `IdentityProviderConfig` by removing `onboardingTransactionEntityIdsTemp`.

This looks like it should have been removed a loooong time ago, but was just crufting up the code.